# picotherm

./: .gitignore  AGENTS.md  baxi600.txt  boot.py  cfgsecrets_template.py  debug.py  deploy  lib.py  main.py  mqtt_async.py  opentherm_app.py  opentherm_rp2.py  pyproject.toml  test.py
docs/: OpenTherm-Function-Matrix-v1_0.xls
umqtt/: simple.py
unittests/: test_lib.py  test_opentherm_app.py  test_opentherm_exceptions.py  test_pio_ondevice.py  test_umqtt.py
