[project]
name = "picotherm"
version = "0.1.0"
description = "MicroPython OpenTherm boiler controller"
authors = [
    {name = "Andrew de Quincey", email = "adq@lidskialf.net"}
]
requires-python = ">=3.11"
dependencies = [
    "mpremote>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "hardware: tests that require actual RP2040 hardware (deselect with '-m \"not hardware\"')"
]
addopts = "-m 'not hardware'"
